parser/tests/cases/snapshots/cases__errors__import_bad_name.snap
---
source: parser/tests/cases/errors.rs
expression: "err_string(stringify!(import_bad_name), module::parse_simple_import, true,\n           \"import x as 123\")"

---
error: failed to parse import statement
  ┌─ import_bad_name:1:13
  │
1 │ import x as 123
  │             ^^^ Unexpected token. Expected a name


