parser/tests/cases/snapshots/cases__errors__module_nonsense.snap
---
source: parser/tests/cases/errors.rs
expression: err

---
error: Unmatched right parenthesis
  ┌─ module_nonsense:1:1
  │
1 │ ))
  │ ^


