parser/tests/cases/snapshots/cases__errors__stmt_vardecl_attr.snap
---
source: parser/tests/cases/errors.rs
expression: "err_string(stringify!(stmt_vardecl_attr), functions::parse_stmt, true,\n           \"f.s : u\")"

---
error: failed to parse variable declaration
  ┌─ stmt_vardecl_attr:1:1
  │
1 │ f.s : u
  │ ^^^ invalid variable declaration target
  │
  = The left side of a variable declaration can be either a name
    or a non-empty tuple.


