parser/tests/cases/snapshots/cases__errors__string_invalid_escape.snap
---
source: parser/tests/cases/errors.rs
expression: err

---
error: String contains an invalid escape sequence
  ┌─ string_invalid_escape:1:1
  │
1 │ "a string \c "
  │ ^^^^^^^^^^^^^^


